[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/ToDoList.gd" type="Script" id=1]

[sub_resource type="VisualScript" id=1]
data = {
"base_type": "Shader",
"functions": [ {
"data_connections": [  ],
"function_id": -1,
"name": "f_312843592",
"nodes": [  ],
"scroll": Vector2( -115.133, -97.0953 ),
"sequence_connections": [  ]
} ],
"is_tool_script": false,
"signals": [  ],
"variables": [  ],
"vs_unify": true
}

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;
void fragment()
{
  COLOR = texture(TEXTURE, UV); //read from texture
	COLOR.b = 1.0;
	COLOR.g = 1.0;
	COLOR.r = 1.0; //set blue channel to 1.0
}"
script = SubResource( 1 )

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="ToDoList" type="ItemList" parent="."]
margin_left = 536.0
margin_top = 64.0
margin_right = 778.0
margin_bottom = 256.0
items = [ "Make The Todo List", null, false ]

[node name="FinishedList" type="ItemList" parent="."]
margin_left = 784.0
margin_top = 64.0
margin_right = 1026.0
margin_bottom = 256.0
items = [ "Finished items", null, false ]
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="."]
material = SubResource( 3 )
margin_top = 66.0
margin_right = 170.0
margin_bottom = 80.0
text = "Adding Things To The List"

[node name="TextEdit" type="TextEdit" parent="."]
margin_top = 82.0
margin_right = 168.0
margin_bottom = 122.0

[node name="Button" type="Button" parent="."]
modulate = Color( 1, 0, 0, 1 )
margin_left = 40.0
margin_top = 130.0
margin_right = 125.0
margin_bottom = 150.0
text = "Add To List"

[node name="timers" type="Node" parent="."]

[connection signal="item_activated" from="ToDoList" to="." method="_on_ItemList_item_activated"]
[connection signal="item_selected" from="ToDoList" to="." method="_on_ItemList_item_selected"]
[connection signal="item_activated" from="FinishedList" to="." method="_on_ItemList_item_activated2"]
[connection signal="item_selected" from="FinishedList" to="." method="_on_ItemList_item_selected2"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
